# icfpc-2024

./: .gitignore  README.md  pom.xml
cpp/: CMakeLists.txt
cpp/src/lambdaman/: main.cpp
cpp/src/spaceship/: main.cpp
outputs/3d/: 1  10  2  3  4  5  6  7  8  9
rust/lambdaman/: Cargo.toml
rust/lambdaman/src/: lambdaman.rs  main.rs
src/main/java/: Main.java
src/main/java/d3/: BinaryOperator.java  MoveOperator.java  Operator.java  Solver3d.java  TimewrapOperator.java
src/main/java/data/: Lambda.java  OpType.java  Operation.java  Type.java  Value.java  Variable.java
src/main/java/evaluation/: Binary.java  Evaluator.java  Ternary.java  Unary.java
src/main/java/io/: IOUtils.java
src/main/java/parsing/: Parser.java
src/main/java/submittor/: Submittor.java
